Dark mode Fixses

--- a/JensensWebApp/wwwroot/css/footer.css
+++ b/JensensWebApp/wwwroot/css/footer.css
@@ -1,6 +1,6 @@
 ﻿#footer-main {
-    background-color: #f8f8f8;
-    border: solid 1px #333;
+    
+    border: solid 1px;
     padding: 1rem;
     width: 100%;
     margin-top: auto;
