--- a/JensensWebApp/wwwroot/css/site.css
+++ b/JensensWebApp/wwwroot/css/site.css
@@ -90,7 +90,7 @@ body {
 }
 
 .dark-mode a {
-    color: #eee;
+    color: white;
 }
 
 .dark-mode {
